--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -347,3 +347,122 @@
     width: 300px;
     margin:10px;   
 }
+
+
+@media(max-width:400px) {
+    .experience{
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        width: 90%;
+        
+        
+        
+        font-family: Arial, Helvetica, sans-serif;
+        padding:0px;
+        
+    }
+    .experience-title{
+        margin-left:0px;
+        
+        
+    }
+    .experience-title h1 {
+        padding: 0px 30px;
+        font-size:30px;
+        font-weight: 500;
+    }
+    
+    .experience-intro {
+        width:90%;
+        
+        padding:10px;
+        margin-left:5%;
+        /*margin-left:40px;*/
+    }
+
+    .experience-intro {
+        width:95%;
+        
+        padding:0px;
+        margin:10px;
+        margin-left:30px;
+    }
+    .experience-containter {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        gap:10px;
+        padding:0px;
+        /*border:2px solid red;*/
+    
+    }
+    .experience-format {
+        width: 400px;
+        /*height:300px;*/
+        border-radius: 20px;
+        /*background-color: white;*/
+        color:black;
+        padding: 30px;
+        padding-bottom: 10px;
+        justify-self: center;
+        align-items: center;
+    
+    }
+
+    .experience-format h1{
+        padding: 3px;
+        font-size: 23px;
+        font-weight: 300;
+        margin:1px;
+        margin-top:-4px;
+       
+    }
+
+
+    .experience-information {
+        display: flex;
+        justify-content: center;  
+        flex-direction: column-reverse;  
+        align-items: center;
+    }
+
+    .experience-image {
+        margin:10px;
+        display: flex;
+        align-items: center;
+        
+  
+    }
+    
+    .experience-image img {
+        width: 350px;
+        height: 210px;
+        object-fit: cover;
+        margin-left:0px;
+        margin-top: 5px;
+    }
+
+
+    .experience-info-left {
+        width: 350px;
+        background: linear-gradient(250deg, #ffffff76 100%, #e6e6e6 60%);
+        /*background-color: grey;*/
+        /*height: 200px;*/
+        padding: 10px;
+        padding-top:10px;
+        margin:10px;
+        margin-right:0px;
+        z-index: +1;
+    
+    }
+
+    .experience-format h1{
+        padding: 3px;
+        font-size: 22px;
+        font-weight: 300;
+       
+    }
+}
