--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -139,3 +139,49 @@
         
     }
 }
+
+@media(max-width:400px) {
+    .home-container {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .home-container-left {
+    
+            width: 400px;
+            justify-content: center;
+            
+            gap:20px;
+            padding: 0px;
+            padding-left:100px;
+            background: linear-gradient(180deg, #161513c7 10%, #161513 100%);
+            
+            margin:0px;
+            margin-right:0px;
+            margin-top:-150px;
+            z-index: +1;
+        
+        
+    }
+
+    .home-container-right {
+        /*border: 2px solid white;*/
+        border-radius: 20px;
+        width: 400px;
+        height: 500px;
+        gap:20px;
+        margin:40px;
+        display: flex;
+        /*background: linear-gradient(264deg, #ffffff 50.40%, #000000 70.6%);
+        z-index: -1;
+        opacity: 0.1;*/
+        
+    }
+    .home-container-right img{
+    
+        width:400px;
+        object-fit: contain;
+        
+    }
+}
