--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -114,7 +114,7 @@
     
 }
 
-@media(max-width:1028px) {
+@media(max-width:900px) {
     .home-container {
         display: flex;
         flex-direction: column-reverse;
@@ -140,7 +140,7 @@
     }
 }
 
-@media(max-width:400px) {
+@media(max-width:600px) {
     .home-container {
         display: flex;
         flex-direction: column-reverse;
@@ -157,7 +157,7 @@
             padding-left:100px;
             background: linear-gradient(180deg, #161513c7 10%, #161513 100%);
             
-            margin:0px;
+            margin-left:-30px;
             margin-right:0px;
             margin-top:-150px;
             z-index: +1;
@@ -171,7 +171,7 @@
         width: 400px;
         height: 500px;
         gap:20px;
-        margin:40px;
+        margin:20px;
         display: flex;
         /*background: linear-gradient(264deg, #ffffff 50.40%, #000000 70.6%);
         z-index: -1;
