--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -53,12 +53,12 @@
     justify-content: center;
     align-items: center;
     grid-template-columns: 1fr;
-   
-    
     width:900px;
     gap:10px;
     margin-top:20px;
     padding-left:60px;
+    border: 2px solid #3f0028;
+    
     /*color:#161513;   */
 }
 
@@ -68,6 +68,7 @@
     align-items: left;
     width: 80%;
     border-radius: 20px;
+    margin-left:5%;
     /*background-color: rgb(248, 248, 248);
     color:black;*/
     padding: 30px;
@@ -120,7 +121,8 @@
     /*background-color:  #161513;*/
     /*border: 3px solid grey;
     border-radius: 20px;*/
-    background: linear-gradient(220deg, #DF8908 10%, #B415FF 100%);
+    /*background: linear-gradient(220deg, #DF8908 10%, #B415FF 100%);*/
+    border: 2px solid white;
    
    
 }
@@ -153,7 +155,7 @@
 }
 
 .skill-info-image img {
-    width: 300px;
+    width: 400px;
     height: 200px;
     object-fit: cover;
     margin-top: 10px;
@@ -224,17 +226,18 @@
         padding:0px;   
     }
     .skill-format {
-        width: 450px;
+        width: 550px;
         
         border-radius: 20px;
         /*background-color: white;*/
         padding: 20px;
+        margin-left:0px;
     
     }
 
     .skill-info-image img {
-        width: 230px;
-        height: 200px;
+        width: 300px;
+        height: 205px;
         object-fit: cover;
         margin-top: 10px;
         margin-left:-10px;
@@ -254,7 +257,7 @@
         /*border: 3px solid grey;
         border-radius: 20px;*/
         /*background: linear-gradient(320deg, #DF8908 1%, #B415FF 100%);*/
-        border: 2px solid linear-gradient(320deg, #DF8908 1%, #B415FF 100%)
+        /*border: 2px solid linear-gradient(320deg, #DF8908 1%, #B415FF 100%)*/
        
        
     }
@@ -279,7 +282,7 @@
     }
 }
 
-@media(min-width:901px) {
+@media(max-width:600px) {
     
     .skills{
         display: flex;
@@ -287,20 +290,22 @@
         align-items: left;
         width: 90%;
         
-        
-        
         font-family: Arial, Helvetica, sans-serif;
         padding:0px;
         
     }
     .skills-title{
-        margin-left:0px;
-        
-        
+        margin-left:0px;     
+    }
+
+    .skills-title h1 {
+        padding: 0px 30px;
+        font-size:35px;
+        font-weight: 500;
     }
 
     .skills-intro {
-        max-width:900px;
+        max-width:400px;
         
         padding:0px;
         margin:10px;
@@ -311,24 +316,55 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 90%;
+        width: 95%;
         gap:10px;
         padding:0px;
         
     }
     .skill-format {
-        width: 600px;
+        width: 400px;
         border-radius: 20px;
         /*background-color: white;*/
-        color:black;
         padding: 20px;
     
     }
     .skill-info {
         display: flex;
         justify-content: left;  
-        gap:40px;
-        margin-top:20px;
+        gap:20px;
+        margin-top:10px;
         /*border: 2px solid gray;*/
+    }
+
+    .skill-info-image {
+        display: none;
+        padding:5px;
+    }
+    
+    .skill-info-image img {
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        margin-top: 10px;
+    
+    }
+
+    .tech-box1 {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        width: 180px;
+        
+        margin: 5px;
+        padding: 2px;
+        padding-left: 5px;
+        color: #ebebeb;
+     
+        /*border: 3px solid grey;
+        border-radius: 20px;*/
+        /*background: linear-gradient(320deg, #DF8908 1%, #B415FF 100%);*/
+        border: 2px solid linear-gradient(320deg, #DF8908 1%, #B415FF 100%)
+       
+       
     }
 }
