--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -289,8 +289,8 @@
     }
 
     .skills-title h1 {
-        padding: 0px 30px;
-        font-size:31px;
+        padding: 0px 20px;
+        font-size:28px;
         font-weight: 400;
     }
 
@@ -318,11 +318,31 @@
         padding: 20px;
     
     }
+    .skill-format h1{
+        
+        font-size: 23px;
+        /*background-color: white;*/
+        padding: 20px;
+    
+    }
+
+    .skill-format h4{
+        width: 380px;
+        border-radius: 20px;
+        /*background-color: white;*/
+        padding: 100px;
+    
+    }
     .skill-info {
         display: flex;
         justify-content: left;  
         gap:20px;
         margin-top:10px;
+        /*border: 2px solid gray;*/
+    }
+
+    .skill-format p {
+        font-size: 15px;
         /*border: 2px solid gray;*/
     }
 
