--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -52,7 +52,7 @@
     gap:10px;
     margin-top:20px;
     padding-left:60px;
-    border: 2px solid #3f0028;
+    
 }
 
 .skill-format {
@@ -306,13 +306,15 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 95%;
+        width: 80%;
         gap:10px;
         padding:0px;
+        border:2px solid #3f0028;
         
     }
     .skill-format {
-        width: 380px;
+        display: flex;
+        width: 90%;
         border-radius: 20px;
         /*background-color: white;*/
         padding: 20px;
@@ -330,7 +332,7 @@
         width: 380px;
         border-radius: 20px;
         /*background-color: white;*/
-        padding: 100px;
+        padding: 10px;
     
     }
     .skill-info {
