--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -68,8 +68,10 @@
     border-radius: 20px;
     background-color: rgb(248, 248, 248);
     color:black;
-    padding: 10px;
+    padding: 40px;
+    padding-top:20px;
     margin:10px;
+    margin-left:5%;
     /*display: flex;
     justify-content: center;
     background-color: rgb(248, 248, 248);*/
@@ -97,18 +99,20 @@
 .experience-information {
     display: flex;
     justify-content: center;  
+    margin-top:20px;
     
 }
 
 .experience-info-left {
-    width: 300px;
+    width: 400px;
     background: linear-gradient(250deg, #ffffff76 100%, #e6e6e6 60%);
     /*background-color: grey;*/
     /*height: 200px;*/
     padding: 10px;
     padding-top:10px;
     margin:10px;
-    margin-right:0px;
+    margin-right:10px;
+    margin-top:0px;
     z-index: +1;
     
 }
@@ -133,6 +137,7 @@
     /*margin:10px;*/
     
     display: flex;
+    
 }
 
 .experience-image img {
@@ -226,14 +231,9 @@
         width: 90%;
         gap:10px;
         padding:0px;
-        /*border:2px solid red;*/
-        
-        
-        
-        
     }
     .experience-format {
-        width: 450px;
+        width: 500px;
         /*height:300px;*/
         border-radius: 20px;
         /*background-color: white;*/
@@ -271,7 +271,7 @@
     }
     
     .experience-image img {
-        width: 350px;
+        width: 400px;
         height: 210px;
         object-fit: cover;
         margin-left:0px;
@@ -280,7 +280,7 @@
 
 
     .experience-info-left {
-        width: 350px;
+        width: 90%;
         background: linear-gradient(250deg, #ffffff76 100%, #e6e6e6 60%);
         /*background-color: grey;*/
         /*height: 200px;*/
@@ -293,60 +293,6 @@
     }
 }
 
-@media(max-width:600px) {
-    
-    .experience{
-        display: flex;
-        flex-direction: column;
-        align-items: left;
-        width: 90%;
-        
-        
-        
-        font-family: Arial, Helvetica, sans-serif;
-        padding:0px;
-        
-    }
-    .experience-title{
-        margin-left:0px;
-        
-        
-    }
-
-    .experience-intro {
-        max-width:900px;
-        
-        padding:0px;
-        margin:10px;
-        margin-left:30px;
-    }
-    .experience-containter {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 90%;
-        gap:10px;
-        padding:0px;
-        
-    }
-    .experience-format {
-        width: 600px;
-        border-radius: 20px;
-        /*background-color: white;*/
-        color:black;
-        padding: 20px;
-    
-    }
-}
-
-.experience-image {
-    display: flex;
-    flex-direction: column;
-    align-items: right;
-    width: 300px;
-    margin:10px;   
-}
 
 
 @media(max-width:600px) {
@@ -374,7 +320,7 @@
     }
     
     .experience-intro {
-        width:380px;
+        width:350px;
         
         padding:10px;
         margin-left:5%;
@@ -382,11 +328,10 @@
     }
 
     .experience-intro {
-        width:400px;
-        
+        width:360px;  
         padding:0px;
         margin:10px;
-        margin-left:30px;
+        margin-left:10px;
     }
     .experience-containter {
         display: flex;
@@ -396,19 +341,20 @@
         width: 90%;
         gap:10px;
         padding:0px;
-        /*border:2px solid red;*/
+        border:2px solid #e6e6e6;
     
     }
     .experience-format {
-        width: 380px;
+        width: 90%;
         /*height:300px;*/
         border-radius: 20px;
         /*background-color: white;*/
         color:black;
-        padding: 30px;
+        padding: 20px;
         padding-bottom: 10px;
         justify-self: center;
         align-items: center;
+        
     
     }
 
@@ -447,7 +393,7 @@
 
 
     .experience-info-left {
-        width: 350px;
+        width: 370px;
         background: linear-gradient(250deg, #ffffff76 100%, #e6e6e6 60%);
         /*background-color: grey;*/
         /*height: 200px;*/
