UI width fix for iphone screen

--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -4,6 +4,7 @@
     align-items: center;
     width: 90%;
     margin:5%;
+    margin-top:-10px;
     height:fit-content;
     /*border: 2px solid white;*/
     font-family: Arial, Helvetica, sans-serif;
@@ -55,8 +56,9 @@
     width:900px;
     gap:10px;
     margin-top:20px;
-    padding-left:60px;
-    color:#161513;   
+    padding-left:60px;  
+    border:2px solid #3f0028;
+    
 }
 
 .experience-format {
@@ -70,12 +72,14 @@
     color:black;
     padding: 40px;
     padding-top:20px;
-    margin:10px;
     margin-left:5%;
+    margin-top:10px;
+    
     /*display: flex;
     justify-content: center;
     background-color: rgb(248, 248, 248);*/
     transition: 0.4s;
+    cursor: pointer;
 
 }
 .experience-format:hover {
@@ -301,66 +305,64 @@
         flex-direction: column;
         align-items: left;
         width: 90%;
-        
-        
-        
         font-family: Arial, Helvetica, sans-serif;
         padding:0px;
         
     }
+
+
     .experience-title{
-        margin-left:0px;
-        
-        
+        margin:0px;
     }
     .experience-title h1 {
-        padding: 0px 30px;
-        font-size:30px;
+        padding: 0px 10px;
+        font-size:28px;
         font-weight: 400;
     }
     
-    .experience-intro {
-        width:350px;
-        
-        padding:10px;
-        margin-left:5%;
-        /*margin-left:40px;*/
-    }
 
     .experience-intro {
-        width:360px;  
+        max-width:400px;
         padding:0px;
-        margin:10px;
-        margin-left:10px;
+        margin:5px;
+        margin-left:30px;
+        margin-top:25px;
     }
-    .experience-containter {
+    .experience-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 90%;
-        margin:0px;
-        padding:0px;    
+        gap:10px;
+        padding:0px;
+        border:2px solid #3f0028;
+        margin-top:10px;
     }
     .experience-format {
-        width: 85%;
-        /*height:300px;*/
+
+        /*width: 85%;
+        
         border-radius: 20px;
-        /*background-color: white;*/
+
         color:black;
         padding: 20px;
         padding-bottom: 10px;
         justify-self: center;
-        align-items: center;
-        
-    
+        align-items: center;*/
+        display: flex;
+        width: 90%;
+        border-radius: 20px;
+        /*background-color: white;*/
+        padding: 20px;
+        margin:0px;
     }
 
     .experience-format h1{
         padding: 3px;
         font-size: 23px;
         font-weight: 300;
-        margin:1px;
+        margin:0px;
         margin-top:-4px;
 
     }
@@ -376,14 +378,12 @@
     .experience-image {
         margin:10px;
         display: flex;
-        align-items: center;
-        
-  
+        align-items: center;  
     }
     
     .experience-image img {
-        width: 350px;
-        height: 210px;
+        width: 330px;
+        height: 200px;
         object-fit: cover;
         margin-left:0px;
         margin-top: 5px;
@@ -391,7 +391,7 @@
 
 
     .experience-info-left {
-        width: 370px;
+        max-width: 350px;
         background: linear-gradient(250deg, #ffffff76 100%, #e6e6e6 60%);
         /*background-color: grey;*/
         /*height: 200px;*/
