UI width fix for iphone screen

--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -311,7 +311,7 @@
         width: 90%;
         gap:10px;
         padding:0px;
-        border:2px solid #3f0028;
+        /*border:2px solid #3f0028;*/
         
     }
     .skill-format {
