--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -336,7 +336,7 @@
         width: 90%;
         gap:10px;
         padding:0px;
-        border:2px solid #3f0028;
+        /*border:2px solid #3f0028;*/
         margin-top:10px;
     }
     .experience-format {
