--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -1,4 +1,4 @@
-.blogs {
+/*.blogs {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,5 +7,106 @@
     height: 400px;
     border: 2px solid white;
     font-family: Arial, Helvetica, sans-serif;
+}*/
+
+.blogs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    margin:5%;
+    margin-top:-10px;
+    height:fit-content;
+    /*border: 2px solid white;*/
+    font-family: Arial, Helvetica, sans-serif;
+    padding:10px;
+    margin-bottom: 80px;
+    
 }
 
+.blogs-title{
+    
+    margin-left:3%;
+    /*margin-left:40px;*/
+    margin-bottom: 30px;
+    
+    
+}
+
+.blogs-title h1 {
+    padding: 0px 30px;
+    font-size:40px;
+    font-weight: 500;
+}
+
+.blogs-intro {
+    width:800px;
+    
+    padding:10px;
+    margin-left:5%;
+    /*margin-left:40px;*/
+}
+
+.blogs-intro p {
+    
+    font-size:15px;
+    line-height: 22px;
+    
+    
+}
+
+
+
+.blogs-containter {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+   
+    
+    width:900px;
+    gap:10px;
+    margin-top:20px;
+    padding-left:60px;  
+    /*border:2px solid #3f0028;*/
+    
+}
+
+.blogs-format {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 55%;
+    /*height:250px;*/
+    border-radius: 20px;
+    background-color: rgb(248, 248, 248);
+    color:black;
+    padding: 40px;
+    padding-top:20px;
+    margin-left:10%;
+    margin-top:10px;
+    
+    /*display: flex;
+    justify-content: center;
+    background-color: rgb(248, 248, 248);*/
+    transition: 0.4s;
+    cursor: pointer;
+
+}
+.blogs-format:hover {
+    transform: scale(1.02);
+}
+
+.blogs-format h1{
+    padding: 3px;
+    font-size: 25px;
+    font-weight: 300;
+   
+}
+.blogs-format p{
+    padding: 2px;
+    font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 2px;
+   
+}
