--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -144,6 +144,21 @@
     
 }
 
+.connect-link {
+    
+    width: 50px;
+    transition: 0.4s;
+}
+.connect-link:hover {
+    transform: scale(1.2s);
+    background-color: grey;
+    border-radius: 50px;
+}
+
+
+
+
+
 .experience-image img {
     width: 300px;
     height: 210px;
@@ -227,14 +242,17 @@
         margin:10px;
         margin-left:30px;
     }
-    .experience-containter {
+    .experience-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 90%;
+        
         gap:10px;
         padding:0px;
+        
+        
     }
     .experience-format {
         width: 500px;
