--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -316,7 +316,7 @@
     }
 
     .blogs-image img {
-        width: 350px;
+        width: 100%;
         height:150px;
         object-fit: cover;
         margin-left:0px;
