--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,7 +3,11 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
+    
+    width: 70%;
+    margin-left:15%;
+    
 }
 
 .footer-top {
