--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -74,3 +74,25 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
+
+@media(max-width:600px) {
+    .footer {
+        /*margin: 20px 50px;*/
+        margin:0px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 70%;
+        margin-left:15%;
+        font-family:Arial, Helvetica, sans-serif;    
+        
+        border:2px solid #B415FF;
+    
+    }
+    .footer-bottom{
+        display:flex;
+        justify-content: space-between;
+        font-size: 12px;
+        max-width: 300px;
+    }
+}
