--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -135,9 +135,6 @@
     background: linear-gradient(180deg, #cbcbcbc7 50%, #ffffff 100%);
     z-index: +1;
     height: 45px;
-    
-    
-
 }
 
 .blog-overlay p {
@@ -195,13 +192,13 @@
     
     }
 
-.blogs-image img {
-    min-width: 190px;
-    width: 100%;
-    height:160px;
-    object-fit: cover;
-    margin-left:0px;
-}
+    .blogs-image img {
+        min-width: 190px;
+        width: 100%;
+        height:160px;
+        object-fit: cover;
+        margin-left:0px;
+    }
    
 }
 
@@ -275,6 +272,7 @@
         align-items: center;
     }
 
+    /*
     .blogs-image {
         margin:10px;
         display: flex;
@@ -287,7 +285,8 @@
         object-fit: cover;
         margin-left:0px;
         margin-top: 15px;
-    }
+    }*/
+    
 
 
     .blogs-info-left {
@@ -321,4 +320,13 @@
         object-fit: cover;
         margin-left:0px;
     }
+    .blog-overlay {
+    
+        width: 100%;
+        margin-top: -45px;
+        background: linear-gradient(180deg, #cbcbcbc7 50%, #ffffff 100%);
+        z-index: +1;
+    }
+    
+    
 }
