--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -93,6 +93,6 @@
         display:flex;
         justify-content: space-between;
         font-size: 12px;
-        max-width: 300px;
+        max-width: 100%;
     }
 }
