Added upcoming blog section, added contact, ready to launch

--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -374,6 +374,7 @@
         /*background-color: white;*/
         padding: 20px;
         margin:0px;
+        margin-top:5px;
     }
 
     .experience-format h1{
