--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -155,6 +155,14 @@
         
     }
 
+    .blogs-intro {
+        max-width:95%;
+        padding:0px;
+        margin:10px;
+        margin-left:30px;
+        margin-top:25px;
+    }
+
     .blogs-containter {
         width: 80%;
         grid-template-columns: 1fr 1fr;
