--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -17,7 +17,7 @@
     margin:5%;
     margin-top:-10px;
     height:fit-content;
-    /*border: 2px solid white;*/
+    border: 2px solid white;
     font-family: Arial, Helvetica, sans-serif;
     padding:10px;
     margin-bottom: 80px;
@@ -68,7 +68,8 @@
     width:90%;
     gap:0px;
     margin-top:20px;
-    padding-left:60px;  
+    padding-left:60px; 
+    border:1px solid blueviolet; 
     
     
 }
@@ -235,11 +236,13 @@
     
 
     .blogs-intro {
-        max-width:350px;
+        max-width:400px;
+        width: 95%;
         padding:0px;
         margin:5px;
-        margin-left:30px;
+        margin-left:20px;
         margin-top:25px;
+        border: 1px solid brown;
     }
     .blogs-containter {
         display: flex;
@@ -247,7 +250,7 @@
         justify-content: center;
         align-items: center;
         grid-template-columns: 1fr;
-        width: 80%;
+        width: 90%;
         gap:10px;
         padding:0px;
         padding-bottom:10px;
@@ -256,7 +259,8 @@
     }
     .blogs-format {
         display: flex;
-        width: 80%;
+        
+        width: 370px;
         border-radius: 20px;
         /*background-color: white;*/
         padding: 20px;
@@ -279,37 +283,7 @@
         justify-content: center;  
         flex-direction: column-reverse;  
         align-items: center;
-    }
-
-    /*
-    .blogs-image {
-        margin:10px;
-        display: flex;
-        align-items: center;  
-    }
-    
-    .blogs-image img {
-        width: 270px;
-        height: 200px;
-        object-fit: cover;
-        margin-left:0px;
-        margin-top: 15px;
-    }*/
-    
-
-
-    .blogs-info-left {
-        max-width: 350px;
-        background: linear-gradient(250deg, #ffffff76 100%, #e6e6e6 60%);
-        /*background-color: grey;*/
-        /*height: 200px;*/
-        padding: 10px;
-        padding-top:10px;
-        margin:10px;
-        margin-right:0px;
-        z-index: +1;
-    
-    }
+    }   
 
     .blogs-format h1{
         padding: 3px;
@@ -324,14 +298,14 @@
     }
 
     .blogs-image img {
-        width: 100%;
-        height:150px;
+        width: 370px;
+        height:170px;
         object-fit: cover;
         margin-left:0px;
     }
     .blog-overlay {
     
-        width: 100%;
+        width: 370px;
         margin-top: -45px;
         background: linear-gradient(180deg, #cbcbcbc7 50%, #ffffff 100%);
         z-index: +1;
