--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -6,7 +6,7 @@
     margin:5%;
     margin-top:-10px;
     height:fit-content;
-    /*border: 2px solid white;*/
+    border: 2px solid white;
     font-family: Arial, Helvetica, sans-serif;
     padding:10px;
     margin-bottom: 80px;
