--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -7,6 +7,7 @@
     
     width: 70%;
     margin-left:15%;
+    border:1px solid #B415FF;
     
 }
 
@@ -94,5 +95,6 @@
         justify-content: space-between;
         font-size: 12px;
         max-width: 100%;
+        border:1px solid #DF8908;
     }
 }
