After launch responsive fix

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -92,6 +92,7 @@
     }
     .footer-bottom{
         display:flex;
+        width: 360px;
         justify-content: space-between;
         font-size: 12px;
         max-width: 100%;
