--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -17,7 +17,7 @@
     margin:5%;
     margin-top:-10px;
     height:fit-content;
-    border: 2px solid white;
+    /*border: 2px solid white;*/
     font-family: Arial, Helvetica, sans-serif;
     padding:10px;
     margin-bottom: 80px;
@@ -69,7 +69,7 @@
     gap:0px;
     margin-top:20px;
     padding-left:60px; 
-    border:1px solid blueviolet; 
+    /*border:1px solid blueviolet; */
     
     
 }
@@ -187,7 +187,7 @@
     
     .blogs-format h1 {
         font-size: 17px;
-        font-weight: 500;
+        font-weight: 600;
         min-height:20px;
         justify-content: center;
         margin-bottom:0px;
@@ -205,7 +205,7 @@
     .blogs-image img {
         min-width: 190px;
         width: 100%;
-        height:160px;
+        height:200px;
         object-fit: cover;
         margin-left:0px;
     }
@@ -236,13 +236,13 @@
     
 
     .blogs-intro {
-        max-width:400px;
+        max-width:360px;
         width: 95%;
         padding:0px;
         margin:5px;
         margin-left:20px;
         margin-top:25px;
-        border: 1px solid brown;
+        
     }
     .blogs-containter {
         display: flex;
@@ -260,7 +260,7 @@
     .blogs-format {
         display: flex;
         
-        width: 350px;
+        width: 90%;
         border-radius: 20px;
         /*background-color: white;*/
         padding: 20px;
@@ -289,8 +289,8 @@
 
     .blogs-format h1{
         padding: 3px;
-        font-size: 17px;
-        font-weight: 500;
+        font-size: 18px;
+        font-weight: 600;
        
     }
 
@@ -300,15 +300,15 @@
     }
 
     .blogs-image img {
-        width: 320px;
+        width: 280px;
         height:200px;
         object-fit: cover;
         margin-left:0px;
     }
     .blog-overlay {
     
-        width: 320px;
-        margin-top: -45px;
+        width: 280px;
+        margin-top: -43px;
         background: linear-gradient(180deg, #cbcbcbc7 50%, #ffffff 100%);
         z-index: +1;
     }
