--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -78,9 +78,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 350px;
+    /*max-width: 360px;*/
     height:250px;
-    width: 60%;
+    width: 65%;
     /*height:250px;*/
     border-radius: 20px;
     background-color: rgb(248, 248, 248);
@@ -103,9 +103,11 @@
 }
 
 .blogs-format h1{
-    padding: 3px;
-    font-size: 18px;
-    font-weight: 300;
+        font-size: 16px;
+        font-weight: 600;
+        min-height:20px;
+        justify-content: center;
+        margin-bottom:0px;
    
 }
 .blogs-format p{
@@ -124,7 +126,7 @@
 
 .blogs-image img {
     width: 300px;
-    height:150px;
+    height:200px;
     object-fit: cover;
     margin-left:0px;
 }
@@ -135,14 +137,13 @@
     margin-top: -45px;
     background: linear-gradient(180deg, #cbcbcbc7 50%, #ffffff 100%);
     z-index: +1;
-    height: 45px;
+    height: 50px;
+    
 }
 
 .blog-overlay p {
     font-weight: 500;
-    font-size: 16px;
-   
-    
+    font-size: 16px;    
 }
 
 @media(max-width:1000px) {
@@ -179,6 +180,7 @@
         width: auto;
         min-height: 40px;
         height: auto;
+        max-width: 350px;
         
         
     }
