--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -57,6 +57,9 @@
     justify-content: space-between;
     font-size: 12px;
     min-width: 340px;
+    margin-top:-20px;
+    padding-bottom:15px;
+    
 }
 
 .footer-bottom-right {
@@ -96,5 +99,6 @@
         min-width: 200px;
         font-size: 12px;
         padding-bottom:15px;
+        margin-top:0px;
     }
 }
