--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -87,6 +87,7 @@
         flex-direction: column;
         gap: 10px;
         width: 70%;
+        
         margin-left:15%;
         font-family:Arial, Helvetica, sans-serif;    
         
@@ -100,5 +101,6 @@
         font-size: 12px;
         padding-bottom:15px;
         margin-top:0px;
+        border: 1px solid rosybrown;
     }
 }
