--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -145,13 +145,14 @@
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
+        border:1px solid yellow;
     }
 
     .home-container-left {
     
-            width: 400px;
+            min-width: 360px;
             justify-content: center;
-            
+            width: 90%;
             gap:20px;
             padding: 0px;
             padding-left:100px;
@@ -168,7 +169,8 @@
     .home-container-right {
         /*border: 2px solid white;*/
         border-radius: 20px;
-        width: 400px;
+        max-width: 350px;
+        width: 95%;
         height: 500px;
         gap:20px;
         margin:20px;
@@ -181,7 +183,8 @@
     }
     .home-container-right img{
     
-        width:400px;
+        min-width:340px;
+        width: 90%;
         object-fit: contain;
         
     }
