--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -27,6 +27,7 @@
     margin:40px;
     margin-right:-250px;
     z-index: +1;
+    
 }
 
 .home-container-left h1 {
@@ -145,37 +146,44 @@
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
-        border:1px solid yellow;
+        
+        
     }
 
     .home-container-left {
     
-            min-width: 360px;
+            min-width: 270px;
             justify-content: center;
+                
             width: 90%;
-            gap:20px;
-            padding: 0px;
-            padding-left:100px;
+            gap:10px;
             background: linear-gradient(180deg, #161513c7 10%, #161513 100%);
             
-            margin-left:-30px;
+            margin-left:0px;
             margin-right:0px;
             margin-top:-150px;
-            z-index: +1;
+            z-index: +1;  
+            padding:20px;
+            padding-left:20px;
+            padding-right:0px;
         
+            
         
     }
 
     .home-container-right {
         /*border: 2px solid white;*/
         border-radius: 20px;
-        max-width: 350px;
+        min-width: 350px;
         width: 95%;
         height: 500px;
         gap:20px;
-        margin:20px;
-        margin-top:-10px;
+        margin:10px;
+        margin-left:30px;
+        margin-top:10px;
         display: flex;
+        padding:0px;
+        
         /*background: linear-gradient(264deg, #ffffff 50.40%, #000000 70.6%);
         z-index: -1;
         opacity: 0.1;*/
@@ -183,8 +191,8 @@
     }
     .home-container-right img{
     
-        min-width:340px;
-        width: 90%;
+        min-width:360px;
+        width: 95%;
         object-fit: contain;
         
     }
