--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -149,6 +149,16 @@
         
         
     }
+    .connect {
+        
+        width: 300px;
+    }
+
+    .connect-linkedin{
+        width:35px;
+        margin-left:30px;
+        transition: 0.2s;
+    }
 
     .home-container-left {
     
