--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -118,6 +118,12 @@
    
 }
 
+.blogs-format a{
+    text-decoration: none;
+    color: black;
+   
+}
+
 .blogs-image {
     display: flex;
     justify-content: center;
